# c_uart_interface_odroid

./: CMakeLists.txt  autopilot_interface.cpp  autopilot_interface.h  camera_recorder.cpp  camera_recorder.h  check_avg.py  check_time.sh  configParam.cpp  configParam.h  imu_recorder.cpp  imu_recorder.h  log.cpp  log.h  main.cpp  makefile  mavlink_control.cpp  mavlink_control.h  run.sh
